--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,13 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://checkout.stripe.com/checkout.js"></script>
+  <!--<script src="https://js.stripe.com/v3/"></script>-->
+  <!--<script type="text/javascript">-->
+    <!--Stripe.setPublishableKey('pk_test_txJbZH4ucp67IJiIvkyzixCh');-->
+    <!--const stripe = Stripe('sk_test_EyYIVrrmyFqBZLtlRU4wU9YC'); // use your test publishable key-->
+    <!--const elements = stripe.elements();-->
+  <!--</script>-->
 </body>
 </html>
